--- a/appointment/my/virtual.html
+++ b/appointment/my/virtual.html
@@ -1691,8 +1691,8 @@
 
                                                             <div class="mb-3" style="width: 49%;float: left;">
                                                                 <input type="text" required id="countryCode"
-                                                                    name="countryCode" placeholder="Country Code"
-                                                                    oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');">
+                                                                    name="countryCode" placeholder="Country"
+                                                                    value="Malaysia">
                                                             </div>
                                                             <div class="mb-3" style="width: 49%;float: right;">
                                                                 <input type="text" id="areaCode" name="areaCode"
