--- a/content_pages/contact.html
+++ b/content_pages/contact.html
@@ -724,7 +724,7 @@
 
                     <div class="col-md-12">
                         <div>
-                            <h5 class=" mb-4 font-weight-normal">Locations</h5>
+                            <h5 class=" mb-4 font-weight-normal">Showrooms</h5>
 
                             <div class="mb-5">
                                 <h6 class="font-weight-bold text-brown">TANJONG PAGAR</h6>
@@ -785,6 +785,33 @@
                                 <div class="h13"> *Last appointment will be 1 hour before closing!
                                 </div>
                             </div>
+
+                            <div class="mb-5">
+
+                                <h6 class="font-weight-bold text-brown">TAMPINES 1</h6>
+                                <p class="py-3 h9">
+                                    10 Tampines Central 1, #01-13,<br />
+                                    Singapore 529536<br />
+
+
+                                    Monday - Thursday: 11am - 9pm <br />
+
+                                    Friday - Sunday: 11am - 9.30pm <br />
+
+                                </p>
+
+                                <p class="h9">
+                                    Call: <a href="tel:+6569667525"> +65 6966 7525</a>
+                                    <br />
+
+                                    Email: <a href="mailto:service@michaeltrio.com">service@michaeltrio.com</a>
+
+
+                                </p>
+                                <div class="h13"> *Last appointment will be 1 hour before closing!
+                                </div>
+                            </div>
+
                             <div class="mb-5">
                                 <p class="h9"> Priority give to appointment*</p>
                             </div>
