--- a/landing_pages/home.html
+++ b/landing_pages/home.html
@@ -334,8 +334,6 @@
                 font-size: 12px;
             }
 
-
-
         }
 
 
@@ -413,8 +411,6 @@
             .perfect-fit-bg {
                 background: linear-gradient(175.67deg, #F5F5F5 -9.43%, #C4C4C4 -9.42%, rgba(205, 205, 205, 0) 95.82%);
             }
-
-
 
 
         }
@@ -774,25 +770,19 @@
             min-height: 450px;
         }
 
+        .home-tam-bg {
+            background-image: url(https://www.michaeltrio.com/pub/media/0appointment/tampines_shop_pic.jpg);
+            background-size: cover;
+            background-position: center center;
+            min-height: 450px;
+        }
+
         .py-sm-3 {
             padding: 1rem 0 !important;
         }
 
         .py-xs-2 {
             padding: 0;
-        }
-
-        @media (max-width: 1199.98px) {
-
-
-            #choose-setting.owl-carousel .owl-item img {
-                width: 150px;
-            }
-
-            #choose-setting.owl-carousel .owl-item.center img {
-                width: 235px;
-            }
-
         }
 
         @media (max-width: 991.98px) {
@@ -804,17 +794,11 @@
 
 
         @media (max-width: 767.98px) {
-            #choose-setting.owl-carousel .owl-item {
-                height: 270px;
-            }
-
-            #create-your-own-engagement.owl-carousel .owl-item img {
-                transition: unset;
-            }
 
             .home-jem-bg,
             .home-tanjong-bg,
-            .home-np-bg {
+            .home-np-bg,
+            .home-tam-bg {
                 background-image: none;
                 min-height: auto;
             }
@@ -883,14 +867,6 @@
             .home-jewel::before {
                 font-size: 3.5rem;
                 top: -56px;
-            }
-
-            #choose-setting.owl-carousel .owl-item {
-                height: auto;
-            }
-
-            #create-your-own-engagement.owl-carousel .owl-item {
-                margin: 0;
             }
         }
 
@@ -1150,9 +1126,9 @@
         </section>
 
 
-        <section class="bg-lighterorange pt-5">
+        <section class="bg-lighterorange py-5">
             <div class="container">
-                <h1 class="text-center mb-0">Wedding Bands</h1>
+                <h1 class="text-center">Wedding Bands</h1>
 
                 <div class="row py-5">
                     <div class="col-sm-12">
@@ -1186,9 +1162,13 @@
 
         <section class="py-5">
             <div class="container">
-                <h1 class="text-center">
-                    Michael Trio Customer Reviews
+                <h1 class="text-center">Michael Trio Customer Reviews
                 </h1>
+                <script type="2be3af30c4ebe8ae256e7cf8-text/javascript">
+                    (function e(){var e=document.createElement("script");e.type="text/javascript",e.async=!0,
+                        e.src="//staticw2.yotpo.com/Pf4mum3dma17hPNCwyFZDDWIR26Rky9wK2lYdRwI/widget.js";var t=document.getElementsByTagName("script")[0];
+                        t.parentNode.insertBefore(e,t)})();
+                    </script>
                 <div style="margin-top: 30px;margin-bottom: 50px;" class="yotpo yotpo-reviews-carousel"
                     data-background-color="transparent" data-mode="most_recent" data-type="product" data-count="9"
                     data-show-bottomline="1" data-autoplay-enabled="1" data-autoplay-speed="3000"
@@ -1196,10 +1176,6 @@
                     data-header-customisation-text="Read what our happy customers have been saying!">
 
                 </div>
-
-
-
-
             </div>
         </section>
 
@@ -1497,20 +1473,28 @@
                             class="w-100 visible-xs">
                     </div>
                     <div class="col-sm-12 col-xs-24 p-0 box">
-                        <div class="py-5">
+                        <div class="py-5 text-left">
                             <h5 class="mb-3">Tanjong Pagar Showroom</h5>
-                            <p class="mb-2">
-                                91 Tanjong Pagar Road S088512 </p>
-
-                            <p class="mb-2"> Monday - Sunday: 12pm - 8.30pm
+                            <p class="mb-3">
+                                91 Tanjong Pagar Road<br />
+                                Singapore 088512
+                            </p>
+                            <p class="mb-3">
+                                Monday - Sunday: 12pm - 8.30pm<br />
                             </p>
 
                             <p class="mb-3">
-                                Call: <a href="tel:+6562990110">+65 62990110</a>
+                                Call: <a href="tel:+6562990110">+65 62990110</a><br />
+                                Email: <a href="mailto:service@michaeltrio.com">service@michaeltrio.com</a>
                             </p>
-                            <a href="{{store url='make-an-appointment?location=tp'}}"
-                                class="btn btn-blue small-btn mb-3">Book
-                                Now</a>
+
+                            <div class="mb-3">
+                                <a href="{{store url='make-an-appointment?location=tp'}}"
+                                    class="btn btn-blue small-btn w-100">Book
+                                    Now</a>
+                            </div>
+
+
                             <div class="h13"> *Last appointment will be 1 hour before closing!
                             </div>
                         </div>
@@ -1524,24 +1508,32 @@
                     </div>
 
                     <div class="col-sm-12 col-xs-24 p-0 box">
-                        <div class="py-5">
+                        <div class="py-5 text-left">
                             <h5 class="mb-3">JEM Showroom</h5>
-                            <p class="mb-2">
+                            <p class="mb-3">
                                 50 Jurong Gateway Rd, #01-60,<br />
-                                S608549</p>
+                                Singapore 608549
+                            </p>
+                            <p class="mb-3">
+                                Monday - Thursday: 11am - 9pm <br />
 
-                            <p class="mb-2"> Monday - Thursday: 11am - 9pm
+                                Friday - Sunday: 11am - 9.30pm <br />
                             </p>
 
-                            <p class="mb-2"> Friday - Sunday: 11am - 9.30pm
-                            </p>
+
 
                             <p class="mb-3">
-                                Call: <a href="tel:+6569513296">+65 6951 3296</a>
+                                Call: <a href="tel:+6569513296">+65 6951 3296</a><br />
+                                Email: <a href="mailto:service@michaeltrio.com">service@michaeltrio.com</a>
                             </p>
-                            <a href="{{store url='make-an-appointment?location=jem'}}"
-                                class="btn btn-blue small-btn mb-3">Book
-                                Now</a>
+
+                            <div class="mb-3">
+                                <a href="{{store url='make-an-appointment?location=jem'}}"
+                                    class="btn btn-blue small-btn w-100">Book
+                                    Now</a>
+                            </div>
+
+
                             <div class="h13"> *Last appointment will be 1 hour before closing!
                             </div>
                         </div>
@@ -1557,30 +1549,79 @@
                             class="w-100 visible-xs">
                     </div>
                     <div class="col-sm-12 col-xs-24 p-0 box">
-                        <div class="py-5">
+                        <div class="py-5 text-left">
                             <h5 class="mb-3">Northpoint City Showroom</h5>
-                            <p class="mb-2">
+                            <p class="mb-3">
                                 Yishun Ave 2, North Wing, <br />
-                                #01-22 Northpoint City S769098</p>
-
-                            <p class="mb-2"> Monday - Thursday: 11am - 9pm
-
+                                #01-22 Northpoint City<br />
+                                Singapore 769098
                             </p>
+                            <p class="mb-3">
+                                Monday - Thursday: 11am - 9pm<br />
 
-                            <p class="mb-2"> Friday - Sunday: 11am - 9.30pm
+                                Friday - Sunday: 11am - 9.30pm<br />
 
                             </p>
 
                             <p class="mb-3">
-                                Call: <a href="tel:+6569691492">+65 6969 1492</a>
+                                Call: <a href="tel:+6569691492">+65 6969 1492</a><br />
+                                Email: <a href="mailto:service@michaeltrio.com">service@michaeltrio.com</a>
                             </p>
-                            <a href="{{store url='make-an-appointment?location=np'}}"
-                                class="btn btn-blue small-btn mb-3">Book
-                                Now</a>
+                            <div class="mb-3">
+                                <a href="{{store url='make-an-appointment?location=np'}}"
+                                    class="btn btn-blue small-btn w-100">Book
+                                    Now</a>
+                            </div>
+
 
                             <div class="h13"> *Last appointment will be 1 hour before closing!
                             </div>
                         </div>
+                    </div>
+                </div>
+
+                <div class="row ">
+                    <div class="col-sm-12 col-xs-24 p-0 box visible-xs">
+                        <img src="https://www.michaeltrio.com/pub/media/0appointment/tampines_shop_pic.jpg" alt=""
+                            class="w-100 ">
+                    </div>
+
+
+
+
+                    <div class="col-sm-12 col-xs-24 p-0 box">
+                        <div class="py-5 text-left">
+                            <h5 class="mb-3">Tampines 1 Showroom</h5>
+                            <p class="mb-3">
+                                10 Tampines Central 1, #01-13,<br />
+                                Singapore 529536
+
+                            </p>
+                            <p class="mb-3">
+
+                                Monday - Thursday: 11am - 9pm<br />
+
+                                Friday - Sunday: 11am - 9.30pm<br />
+                            </p>
+
+                            <p class="mb-3">
+                                Call: <a href="tel:+6569667525">+65 6966 7525 </a><br />
+                                Email: <a href="mailto:service@michaeltrio.com">service@michaeltrio.com</a>
+                            </p>
+
+                            <div class="mb-3">
+                                <a href="{{store url='make-an-appointment?location=tam'}}"
+                                    class="btn btn-blue small-btn w-100">Book
+                                    Now</a>
+                            </div>
+
+
+                            <div class="h13"> *Last appointment will be 1 hour before closing!
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-xs-24 p-0 hidden-xs home-tam-bg box">
+
                     </div>
                 </div>
             </div>
